# gemma-4-finetune-vietnamese-legal-documents

./: .env.example  .gitignore  AUTONOMOUS_STATUS_LIVE.md  AUTONOMOUS_SYSTEM.md  CLAUDE.md  CURRENT_STATUS.md  OPERATIONAL_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt  scrapy.cfg  training-constraints.txt
.claude/commands/: crawl.md  (+7 more)
crawler/: __init__.py  __main__.py  items.py  middlewares.py  parallel_crawler.py  pipelines.py  playwright_crawler.py  settings.py
docs/: HF_JOBS_GUIDE.md  HF_SETUP.md  HF_STRUCTURE.md  XET_UPLOAD.md
hf_jobs/: CONNECTIVITY_ISSUES.md  CREDIT_LIMIT.md  FINAL_REPORT.md  GOOGLE_COLAB_GUIDE.md  README.md  STATUS_REPORT.md  autonomous_status.json  train.py  train_tiny_test.py  train_transformers_native.py  train_unsloth_native.py  train_with_timeout.py  uv_train.py
notebooks/: README.md
rag/: README.md  pipeline.py
scripts/: __init__.py  autonomous_hf_monitor.sh  autonomous_monitor.py  build_pretrain.py  build_sft.py  colab.sh  colab_helper.sh  colab_train.py  config.py  config.sh  create_hf_repos.py  download_hf_dataset.py  download_hf_dataset_fast.py  evaluate_and_report.py  evaluate_model.py  export_gguf.py  git_sync.sh  hf_jobs_monitor.sh  hf_jobs_run.sh  hf_jobs_submit.sh  local_train.py  merge_datasets.py  prepare_hf_dataset.py  process_documents.py  publish_dataset.sh  setup_hf_repos.sh  setup_training_env.py  submit_gemma4_job.sh  submit_hf_job.sh  test_crawler.py  upload_to_hf.py  upload_with_xet.py  validate_data.py
tests/: __init__.py  conftest.py  test_merge.py
(+5 files in other folders)
